# Collections.Methods

./: .gitignore  .gitmodules  .travis.yml  GenericCollectionMethodsBase.cs  Platform.Collections.Methods.csproj  Platform.Collections.Methods.sln  README.html  README.md  filter.yml  index.html  index.json  manifest.json  push-cpp-nuget.sh  toc.html  xrefmap.yml
CSharpToCppTranslator/: CSharpToCppTransformer.cs  CSharpToCppTranslator.csproj  CSharpToCppTranslator.sln  CustomCSharpToCppTransformer.cs  Program.cs
Lists/: CircularDoublyLinkedListMethods.cs  DoublyLinkedListMethodsBase.cs  OpenDoublyLinkedListMethods.cs
Platform.Collections.Methods.Console/: CircularDoublyLinkedListMethods.cpp  Console.cpp  DoublyLinkedListMethodsBase.cpp  GenericCollectionMethodsBase.cpp  OpenDoublyLinkedListMethods.cpp  Platform.Collections.Methods.Console.vcxproj  SizeBalancedTree.cpp  SizeBalancedTree2.cpp  SizeBalancedTreeMethods.cpp  SizeBalancedTreeMethods2.cpp  SizedAndThreadedAVLBalancedTree.cpp  SizedAndThreadedAVLBalancedTreeMethods.cpp  SizedBinaryTreeMethodsBase.cpp  TestExtensions.cpp  TreesTests.cpp
Platform.Collections.Methods.Tests.Console/: Program.cs  (+1 more)
cpp/: CMakeLists.txt  conanfile.txt  install-local-conan-dependencies.sh
cpp/Platform.Collections.Methods/: CircularDoublyLinkedListMethods.cpp  CircularDoublyLinkedListMethods.h  DoublyLinkedListMethodsBase.cpp  GenericCollectionMethodsBase.cpp  GenericCollectionMethodsBase.h  OpenDoublyLinkedListMethods.cpp  Platform.Collections.Methods.AssemblyInfo.h  Platform.Collections.Methods.TemplateLibrary.nuspec  Platform.Collections.Methods.TemplateLibrary.vcxitems  Platform.Collections.Methods.TemplateLibrary.vcxproj  Platform.Collections.Methods.TemplateLibrary.vcxproj.filters  Platform.Collections.Methods.h  Platform.Collections.Methods[cpp].vcxitems  RecursionlessSizeBalancedTreeMethods.cpp  SizeBalancedTreeMethods.cpp  SizeBalancedTreeMethods2.cpp  SizedAndThreadedAVLBalancedTreeMethods.cpp  SizedBinaryTreeMethodsBase.cpp
cpp/Platform.Collections.Methods.Benchmarks/: AllBenchmarks.cpp  TreesBenchmark.cpp
cpp/Platform.Collections.Methods.Tests/: AllTests.cpp  Platform.Collections.Methods.TemplateLibrary.Tests.cpp  Platform.Collections.Methods.TemplateLibrary.Tests.vcxproj  Platform.Collections.Methods.TemplateLibrary.Tests.vcxproj.filters  RecursionlessSizeBalancedTree.cpp  SizeBalancedTree.cpp  SizeBalancedTree2.cpp  SizedAndThreadedAVLBalancedTree.cpp  TestExtensions.cpp  Trees.h  TreesTests.cpp  packages.config  pch.h
cpp/Platform.Collections.Methods.Tests.Console/: App.cpp  Platform.Collections.Methods.TemplateLibrary.Tests.Console.vcxproj
cpp/Platform.Collections.Methods/Lists/: AbsoluteCircularDoublyLinkedListMethods.h  AbsoluteDoublyLinkedListMethodsBase.h  AbsoluteOpenDoublyLinkedListMethods.h  CircularDoublyLinkedListMethods.h  DoublyLinkedListMethodsBase.h  OpenDoublyLinkedListMethods.h  RelativeCircularDoublyLinkedListMethods.h  RelativeDoublyLinkedListMethodsBase.h  RelativeOpenDoublyLinkedListMethods.h
cpp/Platform.Collections.Methods/NuGetPackageSource/: Platform.Collections.Methods.TemplateLibrary.0.0.4.nuspec  Platform.Collections.Methods.TemplateLibrary.0.1.0.nuspec  Platform.Collections.Methods.TemplateLibrary.0.1.1.nuspec
cpp/Platform.Collections.Methods/NuGetPackageSource/lib/native/include/: CircularDoublyLinkedListMethods.cpp  Platform.Collections.Methods.h  SizeBalancedTreeMethods.cpp  SizedAndThreadedAVLBalancedTreeMethods.cpp  SizedBinaryTreeMethodsBase.cpp
cpp/Platform.Collections.Methods/Trees/: RecursionlessSizeBalancedTreeMethods.h  SizeBalancedTreeMethods.h  SizedAndThreadedAVLBalancedTreeMethods.h  SizedBinaryTreeMethodsBase.h
rust/: Cargo.toml
rust/src/: lib.rs  num.rs
rust/src/lists/: absolute_circular_doubly_linked_list.rs  absolute_circular_linked_list.rs  absolute_doubly_linked_list_base.rs  absolute_linked_list.rs  doubly_linked_list_base.rs  linked_list.rs  mod.rs  relative_circular_doubly_linked_list.rs  relative_circular_linked_list.rs  relative_doubly_linked_list.rs  relative_doubly_linked_list_base.rs
rust/src/trees/: mod.rs  no_recur_szb_tree.rs  recursuionless_size_balanced_tree.rs  size_balanced_tree.rs  size_balanced_tree_base.rs  szb_tree.rs
(+92 files in other folders)
